--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,21 +21,21 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-  react-test:
-    name: Run ESLint Tests
-    runs-on: ubuntu-latest
-    needs: react-install
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+  # react-test:
+  #   name: Run ESLint Tests
+  #   runs-on: ubuntu-latest
+  #   needs: react-install
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20.9.0'
+  #     - name: Set up Node.js
+  #       uses: actions/setup-node@v3
+  #       with:
+  #         node-version: '20.9.0'
 
-      - name: Run ESLint
-        run: npx eslint './src/**/*.{js,jsx}'
+  #     - name: Run ESLint
+  #       run: npx eslint './src/**/*.{js,jsx}'
 
   react-build:
     name: Build React App
