--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,58 +1,35 @@
 name: React CI/CD
 
-on:
+on: 
   push:
+    branches:
+      - main
+  pull_request:
     branches:
       - main
 
 jobs:
-  react-install:
-    name: Install Node Modules
+  build:
+    name: Build
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - name: login to DockerHub
+        uses: docker/login-action@v2
         with:
-          node-version: '20.9.0'
-          cache: 'npm'
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      - name: Install dependencies
-        run: npm install
+      - name: set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-  react-build:
-    name: Build React App
-    runs-on: ubuntu-latest
-    needs: react-install
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        continue-on-error: true
         with:
-          node-version: '20.9.0'
+          context: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/project_todolist:latest
 
-      - name: Build project
-        run: npm run build
-
-  docker-build:
-    name: Docker Build and Push
-    runs-on: ubuntu-latest
-    needs: react-build
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Log in to Docker Hub
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-
-      - name: Build and Push Docker Image
-        run: |
-          docker build -t ${{ secrets.DOCKER_IMAGE_NAME }} .
-          docker push ${{ secrets.DOCKER_IMAGE_NAME }}
